--- a/public/Customized/css/style.css
+++ b/public/Customized/css/style.css
@@ -10147,12 +10147,12 @@ pre code {
 }
 
 .table-hover .table-primary:hover {
-  background-color: #f8aefe;
+  background-color: #8EDC6D;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #f8aefe;
+  background-color: #8EDC6D;
 }
 
 .table-secondary,
@@ -10985,8 +10985,8 @@ fieldset:disabled .ajax-upload-dragdrop a.ajax-file-upload,
 
 .btn-primary {
   color: #fff;
-  background-color: #34AF00;
-  border-color: #34AF00;
+  background-color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-primary:hover {
@@ -11004,8 +11004,8 @@ fieldset:disabled .ajax-upload-dragdrop a.ajax-file-upload,
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #34AF00;
-  border-color: #34AF00;
+  background-color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -11280,14 +11280,14 @@ fieldset:disabled .ajax-upload-dragdrop a.ajax-file-upload,
 }
 
 .btn-outline-primary {
-  color: #34AF00;
-  border-color: #34AF00;
+  color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #34AF00;
-  border-color: #34AF00;
+  background-color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -11295,7 +11295,7 @@ fieldset:disabled .ajax-upload-dragdrop a.ajax-file-upload,
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #34AF00;
+  color: #226e02;
   background-color: transparent;
 }
 
@@ -11303,7 +11303,7 @@ fieldset:disabled .ajax-upload-dragdrop a.ajax-file-upload,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
   background-color: #ce8c2f;
-  border-color: #34AF00;
+  border-color: #226e02;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -13566,7 +13566,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #34AF00;
+  background-color: #226e02;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -13739,7 +13739,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary hr {
-  border-top-color: #f8aefe;
+  border-top-color: #8EDC6D;
 }
 
 .alert-primary .alert-link {
@@ -14118,7 +14118,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
   color: #7b1d83;
-  background-color: #f8aefe;
+  background-color: #8EDC6D;
 }
 
 .list-group-item-primary.list-group-item-action.active {
@@ -15056,7 +15056,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #34AF00 !important;
+  background-color: #226e02 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -15184,7 +15184,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #34AF00 !important;
+  border-color: #226e02 !important;
 }
 
 .border-secondary {
@@ -18247,7 +18247,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #34AF00 !important;
+  color: #226e02 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -18837,11 +18837,11 @@ address p {
 }
 
 .blockquote-primary {
-  border-color: #34AF00;
+  border-color: #226e02;
 }
 
 .blockquote-primary .blockquote-footer {
-  color: #34AF00;
+  color: #226e02;
 }
 
 .blockquote-secondary {
@@ -19010,7 +19010,7 @@ code {
 }
 
 .footer a {
-  color: #34AF00;
+  color: #226e02;
   font-size: inherit;
 }
 
@@ -19647,8 +19647,8 @@ code {
 
 .btn-inverse-primary:hover {
   color: #ffffff;
-  background-color: #34AF00;
-  border-color: #34AF00;
+  background-color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-inverse-primary.focus, .btn-inverse-primary:focus {
@@ -19656,15 +19656,15 @@ code {
 }
 
 .btn-inverse-primary.disabled, .btn-inverse-primary:disabled {
-  color: #34AF00;
+  color: #226e02;
   background-color: transparent;
 }
 
 .btn-inverse-primary.active, .btn-inverse-primary:active,
 .show > .btn-inverse-primary.dropdown-toggle {
   color: #ffffff;
-  background-color: #34AF00;
-  border-color: #34AF00;
+  background-color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-primary, .btn-primary:hover {
@@ -19925,8 +19925,8 @@ code {
 
 /* outlinw buttons */
 .btn-outline-primary {
-  color: #34AF00;
-  border-color: #34AF00;
+  color: #226e02;
+  border-color: #226e02;
 }
 
 .btn-outline-primary:not(.btn-outline-light) {
@@ -20101,7 +20101,7 @@ code {
 }
 
 .card.card-outline-primary {
-  border: 1px solid #34AF00;
+  border: 1px solid #226e02;
 }
 
 .card.card-outline-warning {
@@ -20256,7 +20256,7 @@ code {
   width: 18px;
   height: 18px;
   border-radius: 2px;
-  border: solid #34AF00;
+  border: solid #226e02;
   border-width: 2px;
   -webkit-transition: all;
   -moz-transition: all;
@@ -20291,7 +20291,7 @@ code {
 }
 
 .form-check .form-check-label input[type="checkbox"]:checked + .input-helper:before {
-  background: #34AF00;
+  background: #226e02;
   border-width: 0;
 }
 
@@ -20320,7 +20320,7 @@ code {
   content: "";
   top: 0;
   left: 0;
-  border: solid #34AF00;
+  border: solid #226e02;
   border-width: 2px;
   width: 20px;
   height: 20px;
@@ -20369,7 +20369,7 @@ code {
 }
 
 .form-check .form-check-label input[type="radio"]:checked + .input-helper:before {
-  background: #34AF00;
+  background: #226e02;
   border-width: 0;
 }
 
@@ -20397,12 +20397,12 @@ code {
 
 .form-check-primary.form-check label input[type="checkbox"] + .input-helper:before,
 .form-check-primary.form-check label input[type="radio"] + .input-helper:before {
-  border-color: #34AF00;
+  border-color: #226e02;
 }
 
 .form-check-primary.form-check label input[type="checkbox"]:checked + .input-helper:before,
 .form-check-primary.form-check label input[type="radio"]:checked + .input-helper:before {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .form-check-secondary.form-check label input[type="checkbox"] + .input-helper:before,
@@ -20553,13 +20553,13 @@ select.tt-hint:focus {
 select.form-control.border-primary, .select2-container--default select.border-primary.select2-selection--single, .select2-container--default .select2-selection--single select.border-primary.select2-search__field, select.border-primary.typeahead,
 select.border-primary.tt-query,
 select.border-primary.tt-hint {
-  outline: 1px solid #34AF00;
+  outline: 1px solid #226e02;
 }
 
 select.form-control.border-primary:focus, .select2-container--default select.border-primary.select2-selection--single:focus, .select2-container--default .select2-selection--single select.border-primary.select2-search__field:focus, select.border-primary.typeahead:focus,
 select.border-primary.tt-query:focus,
 select.border-primary.tt-hint:focus {
-  outline: 1px solid #34AF00;
+  outline: 1px solid #226e02;
 }
 
 select.form-control.border-secondary, .select2-container--default select.border-secondary.select2-selection--single, .select2-container--default .select2-selection--single select.border-secondary.select2-search__field, select.border-secondary.typeahead,
@@ -20751,7 +20751,7 @@ dl li {
   width: 10px;
   height: 10px;
   border-radius: 100%;
-  background: #34AF00;
+  background: #226e02;
   z-index: 1;
 }
 
@@ -20785,7 +20785,7 @@ dl li {
   height: 15px;
   left: -30px;
   top: 0;
-  border: 4px solid #34AF00;
+  border: 4px solid #226e02;
   margin-right: 15px;
   z-index: 2;
   background: #ffffff;
@@ -20840,7 +20840,7 @@ dl li {
   font-size: 20px;
   width: 40px;
   text-align: left;
-  color: #34AF00;
+  color: #226e02;
 }
 
 .icon-in-bg {
@@ -20874,7 +20874,7 @@ dl li {
   border-radius: 5px;
   line-height: 2.812rem;
   text-align: center;
-  background: #34AF00;
+  background: #226e02;
 }
 
 .icon-box-primary i {
@@ -21301,7 +21301,7 @@ dl li {
 }
 
 .toggle-switch input:checked + .toggle-slider {
-  background-color: #34AF00;
+  background-color: #226e02;
 }
 
 .toggle-switch input:checked + .toggle-slider:before {
@@ -21311,7 +21311,7 @@ dl li {
 }
 
 .toggle-switch.toggle-switch-primary input:checked + .toggle-slider {
-  background-color: #34AF00;
+  background-color: #226e02;
 }
 
 .toggle-switch.toggle-switch-secondary input:checked + .toggle-slider {
@@ -21412,7 +21412,7 @@ dl li {
 .br-theme-bars-reversed .br-widget a,
 .br-theme-bars-horizontal .br-widget a {
   background-color: rgba(236, 55, 252, 0.6);
-  color: #34AF00;
+  color: #226e02;
 }
 
 .br-theme-bars-1to10 .br-widget a.br-selected, .br-theme-bars-1to10 .br-widget a.br-active,
@@ -21424,7 +21424,7 @@ dl li {
 .br-theme-bars-reversed .br-widget a.br-active,
 .br-theme-bars-horizontal .br-widget a.br-selected,
 .br-theme-bars-horizontal .br-widget a.br-active {
-  background-color: #34AF00;
+  background-color: #226e02;
 }
 
 .br-theme-bars-square .br-widget a {
@@ -21433,8 +21433,8 @@ dl li {
 }
 
 .br-theme-bars-square .br-widget a.br-selected, .br-theme-bars-square .br-widget a.br-active {
-  border-color: #34AF00;
-  color: #34AF00;
+  border-color: #226e02;
+  color: #226e02;
 }
 
 .br-theme-bars-movie .br-widget .br-current-rating,
@@ -21464,7 +21464,7 @@ dl li {
 
 /* Select2 */
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .select2-container--default .select2-selection--single,
@@ -21510,7 +21510,7 @@ dl li {
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice:nth-child(5n+1) {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice:nth-child(5n+2) {
@@ -21579,12 +21579,12 @@ dl li {
 .tt-suggestion:hover {
   cursor: pointer;
   color: #ffffff;
-  background-color: #34AF00;
+  background-color: #226e02;
 }
 
 .tt-suggestion .tt-cursor {
   color: #ffffff;
-  background-color: #34AF00;
+  background-color: #226e02;
 }
 
 .tt-suggestion p {
@@ -21755,7 +21755,7 @@ dl li {
 /* Sidebar */
 .sidebar {
   min-height: calc(100vh - 60px);
-  background: #34AF00;
+  background: #226e02;
   font-family: "Karla", sans-serif;
   font-weight: normal;
   padding: 0;
@@ -21877,7 +21877,7 @@ dl li {
 
 .sidebar .nav .nav-item .nav-link[aria-expanded="true"] {
   background: rgba(255, 255, 255, 0.4);
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
   border-radius: 4px;
 }
 
@@ -21907,11 +21907,11 @@ dl li {
 }
 
 .sidebar .nav .nav-item.active + .nav-item .nav-link {
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
 }
 
 .sidebar .nav .nav-item:first-child .nav-link {
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
 }
 
 .sidebar .nav:not(.sub-menu) {
@@ -21926,7 +21926,7 @@ dl li {
   background: rgba(255, 255, 255, 0.4);
   color: #fff;
   border-radius: 4px;
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
 }
 
 .sidebar .nav:not(.sub-menu) > .nav-item:hover > .nav-link i.menu-arrow {
@@ -21938,7 +21938,7 @@ dl li {
 }
 
 .sidebar .nav:not(.sub-menu) > .nav-item:hover + .nav-item .nav-link {
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
 }
 
 .sidebar .nav.sub-menu {
@@ -21962,7 +21962,7 @@ dl li {
   font-size: 0.875rem;
   line-height: 1;
   height: auto;
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
   margin: 0;
 }
 
@@ -21996,7 +21996,7 @@ dl li {
 }
 
 .sidebar .nav.sub-menu .nav-item:first-child .nav-link {
-  border-top: 1px solid #34AF00;
+  border-top: 1px solid #226e02;
 }
 
 .sidebar .user-profile {
@@ -22047,7 +22047,7 @@ dl li {
 }
 
 .navbar .navbar-brand-wrapper {
-  background: #34AF00;
+  background: #226e02;
   transition: width 0.25s ease, background 0.25s ease;
   -webkit-transition: width 0.25s ease, background 0.25s ease;
   -moz-transition: width 0.25s ease, background 0.25s ease;
@@ -22353,7 +22353,7 @@ dl li {
 }
 
 .navbar.navbar-primary .navbar-menu-wrapper {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-primary:not(.navbar-light) .navbar-menu-wrapper .navbar-toggler {
@@ -22386,7 +22386,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-secondary .navbar-menu-wrapper {
@@ -22423,7 +22423,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-success .navbar-menu-wrapper {
@@ -22460,7 +22460,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-info .navbar-menu-wrapper {
@@ -22497,7 +22497,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-warning .navbar-menu-wrapper {
@@ -22534,7 +22534,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper {
@@ -22571,7 +22571,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-light .navbar-menu-wrapper {
@@ -22608,7 +22608,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 .navbar.navbar-dark .navbar-menu-wrapper {
@@ -22645,7 +22645,7 @@ dl li {
 }
 
 .navbar.navbar-danger .navbar-menu-wrapper .nav-item .nav-link.count-indicator .count {
-  background: #34AF00;
+  background: #226e02;
 }
 
 @media (max-width: 991px) {
@@ -22769,7 +22769,7 @@ dl li {
   .sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapsing {
     display: block;
     padding: 0 0;
-    background: #34AF00;
+    background: #226e02;
     border-radius: 0 0 5px 0;
     position: absolute;
     left: 70px;
