--- a/public/Customized/css/style.css
+++ b/public/Customized/css/style.css
@@ -8591,8 +8591,8 @@
 :root {
   --blue: #5E50F9;
   --indigo: #6610f2;
-  --purple: #6a008a;
-  --pink: #E91E63;
+  --purple:#34AF00;
+  --pink: #34AF00;
   --red: #f96868;
   --orange: #f2a654;
   --yellow: #f6e84e;
