--- a/public/Customized/css/style.css
+++ b/public/Customized/css/style.css
@@ -22842,8 +22842,8 @@ dl li {
   padding: 5px 5px;
 }
 
-    /* Styles for the popup card */
-    .popup-card {
+     /* Styles for the popup card */
+     .popup-card {
       position: fixed;
       top: 30%;
       left: 55%;
@@ -22855,6 +22855,8 @@ dl li {
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       display: none; /* Initially hide the card */
       z-index: 9999; /* Ensure the card appears on top of other elements */
+      max-width: 900px;
+      margin: 0 auto;
     }
     
     /* Styles for the buttons */
@@ -22867,6 +22869,12 @@ dl li {
     .popup-card-buttons button {
       width: 100px;
       margin: 0 5px; /* Reduce the space between buttons */
+    }
+
+    @media (max-width: 768px) {
+      .popup-card {
+        max-width: 100%;
+      }
     }
 
     #diseaseName, #predictionConfidence {
